fix(pagination): high contrast media query

--- a/module/media-query/mixin/_contrast.scss
+++ b/module/media-query/mixin/_contrast.scss
@@ -1,4 +1,4 @@
-@mixin selector() {
+@mixin high-contrast() {
   @media (forced-colors: active ),
   (prefers-contrast: more) {
     @content;
